[project]
name = "google-doc-generator"
version = "0.1.0"
description = "A tool that integrates Google APIs to generate dynamic Google Docs, handle feedback, grading, and automate tasks for educators."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "fpdf>=1.7.2",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "google-generativeai>=0.8.4",
    "gunicorn>=23.0.0",
    "mistralai>=1.5.0",
    "psycopg2-binary>=2.9.10",
    "rich>=13.9.4",
]